add namespace wildcard deletion